istio/tetrate/0-one-tier-application/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
spec:
  selector:
    app: hello-world
  type: ClusterIP
  ports:
  - name: hello-world
    protocol: TCP
    port: 80
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
